--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'java'
-apply plugin: 'maven'
 
 group = 'com.cnaude'
 def jenkinsBuild = System.getenv("BUILD_NUMBER") ?: "SNAPSHOT"
 version = "0.1.${jenkinsBuild}"
 description = 'PurpleBungeeIRC'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 configurations {
     shade
@@ -23,7 +22,7 @@ repositories {
 
 dependencies {
     //shade fileTree (dir: 'dist-lib', include: '*.jar')
-    shade 'com.cnaude.pircbotx:pircbotx:2.1.8-shaded'
+    shade 'com.cnaude.pircbotx:pircbotx:2.JavaVersion.VERSION_17-shaded'
     compile 'com.cnaude.herochat:HerochatBungeeBridgeBungee:1.1.0'
     compile 'commons-io:commons-io:2.4'
     compile 'net.md-5:bungeecord-api:1.16-R0.4-SNAPSHOT'
@@ -36,13 +35,13 @@ dependencies {
     compileOnly "org.projectlombok:lombok:1.16.16"
 }
 
-jar {
-    configurations.shade.each { dep ->
-        from(project.zipTree(dep)){
-            exclude 'META-INF', 'META-INF/**', 'LICENSE.txt'
-        }
-    }
-}
+// jar {
+//     configurations.shade.each { dep ->
+//         from(project.zipTree(dep)){
+//             exclude 'META-INF', 'META-INF/**', 'LICENSE.txt'
+//         }
+//     }
+// }
 
 processResources {
     inputs.property "version", version.toString()
@@ -55,6 +54,6 @@ processResources {
 
 
 compileJava {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
